--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Tech Portfolio</title>
+    <title> My Portfolio</title>
     <link rel="shortcut icon" type="x-icon" href="log.jpg.jpg">
 
     <link rel="stylesheet" href="style.css">
